[metadata]
name = validation-app-engine
version = 0.3.5
summary = Validation App Engine
description-file =
    README.rst
author = VMware Inc
classifier =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    axon
